--- a/periodic_table.html
+++ b/periodic_table.html
@@ -5,8 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Periodic Table</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="non-react">
+        <!-- Metals Group -->
+        <div class="metals">
+            <div class="elements">1<br> H</div>
+            <div class="elements">3<br> Li</div>
+            <div class="elements">11 <br> Na</div>
+            <div class="elements">19 <br> K</div>
+            <div class="elements">37 <br> Rb</div>
+            <div class="elements">55 <br> Cs</div>
+            <div class="elements">87 <br> Fr</div>
+            <div class="elements hel">2 <br> He</div>
+            <div class="elements">4 <br> Be</div>
+            <div class="elements">12 <br> Mg</div>
+            <div class="elements">20 <br> Ca</div>
+            <div class="elements">38 <br> Sr</div>
+            <div class="elements">56 <br> Ba</div>
+            <div class="elements">88 <br> Ra</div>
+        </div>
+        
+
+        <div class="tran-mets">
+            <div class="elements">21<br> Sc</div>
+            <div class="elements">39<br> Y</div>
+            <div class="elements">71<br> Lu</div>
+            <div class="elements">103 <br> Lr</div>
+            <div class="elements">22  <br>Ti</div>
+            <div class="elements">40  <br>Zr</div>
+            <div class="elements">72 <br>Hf</div>
+            <div class="elements">104<br> Rf</div>
+            <div class="elements">23 <br>V</div>
+            <div class="elements">41 <br>Nb</div>
+            <div class="elements">73 <br>Ta</div>
+            <div class="elements">105<br> Db</div>
+            <div class="elements">24 <br>Cr</div>
+            <div class="elements">42 <br>Mo</div>
+            <div class="elements">74 <br>W</div>
+            <div class="elements">106<br> Sg</div>
+            <div class="elements">25 <br>Mn</div>
+            <div class="elements">43 <br>Tc</div>
+            <div class="elements">75<br> Re</div>
+            <div class="elements">107<br> Bh</div>
+            <div class="elements">26 <br>Fe</div>
+            <div class="elements">44 <br>Ru</div>
+            <div class="elements">76 <br>Os</div>
+            <div class="elements">108<br> Hs</div>
+            <div class="elements">27 <br>Co</div>
+            <div class="elements">45 <br>Rh</div>
+            <div class="elements">77 <br>Ir</div>
+            <div class="elements">109<br> Mt</div>
+            <div class="elements">28 <br>Ni</div>
+            <div class="elements">46 <br>Pd</div>
+            <div class="elements">78 <br>Pt</div>
+            <div class="elements">110<br> Ds</div>
+            <div class="elements">29 <br>Cu</div>
+            <div class="elements">47 <br>Ag</div>
+            <div class="elements">79 <br>Au</div>
+            <div class="elements">111<br> Rg</div>
+            <div class="elements">30 <br>Zn</div>
+            <div class="elements">48 <br>Cd</div>
+            <div class="elements">80 <br>Hg</div>
+            <div class="elements">112<br> Cn</div>
+        </div>
+
+        <div class="non-mets">
+            <div class="elements">5<br>B</div>
+            <div class="elements">13<br>Al</div>
+            <div class="elements">31<br>Ga</div>
+            <div class="elements">49<br>In</div>
+            <div class="elements">81<br>Tl</div>
+            <div class="elements">113<br>Nh</div>
+            <div class="elements">6<br>C</div>
+            <div class="elements">14<br>Si</div>
+            <div class="elements">32<br>Ge</div>
+            <div class="elements">50<br>Sn</div>
+            <div class="elements">82<br>Pb</div>
+            <div class="elements">114<br>Fl</div>
+            <div class="elements">7<br>N</div>
+            <div class="elements">15<br>P</div>
+            <div class="elements">33<br>As</div>
+            <div class="elements">51<br>Sb</div>
+            <div class="elements">83<br>Bi</div>
+            <div class="elements">115<br>Mc</div>
+            <div class="elements">8<br>O</div>
+            <div class="elements">16<br>S</div>
+            <div class="elements">34<br>Se</div>
+            <div class="elements">52<br>Te</div>
+            <div class="elements">84<br>Po</div>
+            <div class="elements">116<br>Lv</div>
+            <div class="elements">9<br>F</div>
+            <div class="elements">17<br>Cl</div>
+            <div class="elements">35<br>Br</div>
+            <div class="elements">53<br>I</div>
+            <div class="elements">85<br>At</div>
+            <div class="elements">117<br>Ts</div>
+            <div class="elements">10<br>Ne</div>
+            <div class="elements">18<br>Ar</div>
+            <div class="elements">36<br>Kr</div>
+            <div class="elements">54<br>Xe</div>
+            <div class="elements">86<br>Rn</div>
+            <div class="elements">118<br>Og</div>
+        </div>
+
+
+
+
+    </div>
 </body>
 </html>
